Java to 25 finalized, code formatted